add_executable(mutiny_integration
    main.cpp
    CommandLineArguments.test.cpp
    CommandLineTestRunner.test.cpp
    Compatibility.test.cpp
    mutiny_c.test.c
    mutiny_c.test.cpp
    mutiny_c_fixture.test.cpp
    fail_method_c_body.c
    ExpectFailTestShell.test.cpp
    MockNamedValue.test.cpp
    MockSupport.c
    MockSupport_c.test.cpp
    OrderedTestC.test.c
    Ordered.test.cpp
    OrderedTestC.test.cpp
    Preprocessor.test.cpp
    SetPointerPlugin.test.cpp
    String.test.cpp
    TestFailure.test.cpp
    TestFailureNaN.test.cpp
    TestFilter.test.cpp
    TestInstaller.test.cpp
    TestOutput.test.cpp
    TestPlugin.test.cpp
    TestRegistry.test.cpp
    TestResult.test.cpp
    Shell.test.cpp
    TestShellCustomBase.test.cpp
    TestShellMacros.test.cpp
    TestShellPointerArray.test.cpp
    TestShellProperty.test.cpp
    TestShellStringMacros.test.cpp
)

target_link_libraries(mutiny_integration
    PRIVATE mutiny
)

include(mutiny)
mutiny_discover_tests(mutiny_integration)
