cmake_minimum_required(VERSION 3.10)
project(test LANGUAGES CXX)
list(APPEND CMAKE_MODULE_PATH "${MUTINY_MODULE_PATH}")
include(mu.tiny)
add_executable(MyTests "${CMAKE_CURRENT_LIST_DIR}/../empty.cpp")
mutiny_discover_tests(MyTests DETAILED OFF)
get_target_property(p MyTests MUTINY_DISCOVER_DETAILED)
message(STATUS "DISCOVER_DETAILED: ${p}")
